# FinControl-App

./: .env.example  .env.n8n  .gitignore  App.tsx  README.md  db.sqlite3  eslint.config.mjs  index.html  lint_errors.txt  metadata.json  package-lock.json  package.json  pyproject.toml  start_bot.bat  start_dev.bat  types.ts  utils.ts
components/: ExpenseReport.tsx  MonthSelector.tsx  SummaryCard.tsx  TransactionList.tsx  TransactionModal.tsx
config/: settings.py  urls.py
core/: forms.py  models.py  urls.py  views.py
core/management/commands/: create_categories.py
core/migrations/: 0001_initial.py
core/services/: nlp.py  whatsapp.py
hooks/: useTransactions.ts
prisma/: dev.db  schema.prisma  seed.ts
public/: manifest.json
scripts/: diagnose-auth.ts  verify-db.js
src/app/: globals.css  layout.tsx  providers.tsx
src/app/api/achievements/: route.ts
src/app/api/backup/: route.ts
src/app/api/budgets/: route.ts
src/app/cards/: page.tsx
src/app/components/: CreditCard3D.tsx
src/app/dashboard/: page.tsx  types.ts
src/app/goals/: page.tsx
src/app/insights/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/app/reports/: page.tsx
src/app/settings/: page.tsx
src/lib/: auth.ts  nlp.ts
src/lib/ai/: anomalies.ts  forecasting.ts  patterns.ts
src/lib/importers/: categorizer.ts  csv.ts  ofx.ts
src/types/: next-auth.d.ts
theme/static_src/src/: styles.css
theme/templates/: dashboard.html
whatsapp-bot/: index.js  package-lock.json  package.json
whatsapp-bot/tokens/finance-bot/: DevToolsActivePort  Local State
(+325 files in other folders)
