[project]
name = "finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.11",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.12.0",
    "django-tailwind>=4.4.2",
]
